# jebat-core

./: .codex  .dockerignore  .env.example  .gitattributes  .gitignore  .jebatrc.json  .openclaude-profile.json  AGENTS.md  AGENT_STACK_SECURITY_AUDIT.md  ARCHITECTURE.md  ARCHITECTURE_ENHANCEMENT.md  AWESOME_OPENCLAW_SHORTLIST.md  BOOTSTRAP.md  BRAIN_STATUS.generated.md  BRAIN_USAGE_POLICY.md  BUILD_ROADMAP.md  CHANGELOG.md  CLI_AGENT_STATUS.md  COMPANION_SCRIPT_INSPECTION.md  COMPLETE_PLATFORM_SUMMARY.md  COMPLETE_ROADMAP_SUMMARY.md  COMPLETE_SESSION_SUMMARY.md  CONTRIBUTING.md  CORE_SKILL_EXECUTION_MAP.md  CORTEX_CONTINUUM_ANALYSIS.md  DECISION_PROVENANCE_LOG.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DESIGN.md  DIRECT_SOURCE_INSPECTION_NOTES.md  Dockerfile  EXECUTIVE_SUMMARY.md  EXTERNAL_SKILL_REVIEWS.md  EXTERNAL_SKILL_VETTING.md  FEATURE_RENAMING.md  FIFTH_BATCH_EXTERNAL_REVIEWS.md  FOURTH_BATCH_EXTERNAL_REVIEWS.md  HEARTBEAT.md  HERMES.md  (+182 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.jebat/: security_console_state.json
.learnings/: LEARNINGS.md
.omx/: metrics.json
.openclaw/: workspace-state.json
.qwen/: settings.json  settings.json.orig
Formula/: README.md  jebat.rb
PROJECT_TEMPLATE/: .env.example  README.md  bot.py  requirements.txt
adapters/: README.md  install.py  jebat-token-efficient.md  jebat-universal-prompt.md  jebat.bat  sync-check.md  validate.py
agentix/: agent.py
automation/: __init__.py  agent_manager.py
brain/: INDEX.md
chat/: index.html  test.html
config/: __init__.py  config_manager.py
dashboard-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
database/: Dockerfile  schema.sql
docs/: AI_BUILDER.md  AI_CHAT.md  AI_STUDIO.md  ARCHITECTURE-MONITORING.md  ARCHITECTURE-SECURITY.md  CUSTOM_PROVIDERS.md  GIT_SETUP.md  IDE_INTEGRATION_GUIDE.md  IDE_QUICK_START.md  IMMERSIVE_BUILDER_DESIGN.md  JEBAT_ONLINE_DEPLOY.md  LANDING_PAGE.md  LLAMACPP_VPS_DEPLOYMENT.md  MCP_INTEGRATION_GUIDE.md  NEXT-IMPROVEMENTS.md  OPENCLAW_JEBATCORE_INTEGRATION.md  PUSH_TO_GIT.md  TOKEN-OPTIMIZATION.md  VSCODE_JEBAT_HERMES_PROJECT_START.md  ZED_SETUP.md  grok-plugin-notes.md  operator-terminal-stack.md  pentest-operator-helpers.md
examples/: basic_automation.py
functions/: install.sh.js
ide-configs/: vscode.continue.json  zed.settings.json
jebat/: README.md  __init__.py  requirements.txt
jebat-awesome-skills/: CORTEX_ANALYSIS.md  README.md  package.json  skills_index.json
jebat-npm/: LICENSE  README.md  package.json
jebat-online/: package-jebat-cli.json  package-lock.json
jebat-sdk-ts/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
jebat-tokguru/: CORTEX_ANALYSIS.md  README.md  package.json  skills_index.json
jebat_cli_new/: README.md  __init__.py  __main__.py  agent.py  git.py  jebat.py  main.py  models.py  provider_anthropic.py  provider_gemini.py  provider_github.py  provider_ollama.py  provider_openai.py  providers.py  repl.py  runner.py  safety.py  slash_commands.py  stream.py  tools.py  ux.py
jebat_dev/: INTERACTIVE_CLI_GUIDE.md  README.md  __init__.py  launch.py  requirements.txt
jebat_project/: README.md  __init__.py  __main__.py  workspace_capture.py
jebat_sdk/: CHANGELOG.md  README.md  pyproject.toml
jebat_sdk/python/: pyproject.toml
jebat_sdk/python/src/jebat_sdk/: __init__.py  client.py  config.py  errors.py  models.py  testing.py
jebat_sdk/src/jebat_sdk/: __init__.py  async_client.py  cli.py  client.py  exceptions.py  retry.py  websocket.py
jebat_sdk/src/jebat_sdk/models/: __init__.py  agents.py  auth.py  channels.py  chat.py  common.py  memories.py  monitoring.py
jebat_sdk/typescript/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
jebat_sdk/typescript/src/: index.ts
jebat_sdk/typescript/src/core/: client.ts  config.ts
jebat_sdk/typescript/src/errors/: index.ts
jebat_sdk/typescript/src/hooks/: index.ts
jebat_sdk/typescript/src/models/: index.ts
jebat_sdk/typescript/src/testing/: index.ts
jebatcore/: Dockerfile.npm  LICENSE  README.md  package-lock.json  package.json
lib/: cli.js  constants.js  detect.js  install.js  mcp-server.js  prompt.js  skill-manager.js  token-config.json  token-utils.js
memory/: 2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-06.md  2026-04-23.md
mobile/: pubspec.yaml
monitoring/: prometheus.yml
my-api/: main.py
plans/: enhancement_plan.md  jebat-system-build.md
references/: JEBAT-REVAMP-PLAN.md
routers/: __init__.py  agents.py  analytics.py  auth.py  catalyst.py  chat.py  ghost.py  loop.py  memory.py  pentest.py  skills.py  status.py  think.py
scripts/: append-entity-memory.ps1  append-lifecycle-entry.ps1  append-provenance-entry.ps1  append-remediation-entry.ps1  append-task-record.ps1  auto-deploy.sh  build-cli-bundle.bat  build-cli-bundle.sh  coding-memory-writeback-helper.ps1  coding-route-helper.ps1  coding-task-intake-helper.ps1  coding-verification-helper.ps1  cybersecurity-finding-helper.ps1  daily-memory-review-helper.ps1  demo.sh  deploy-local-llm.sh  deploy-to-vps.sh  deploy.sh  entity-memory-helper.ps1  export_jebat_gateway.py  export_openclaw_jebatcore.py  full-install-test.sh  generate-brain-index.ps1  generate-brain-status.ps1  generate-lifecycle-entry.ps1  generate-og-image.sh  generate-provenance-entry.ps1  generate-reviewed-skill-attestation.ps1  generate-runtime-status.ps1  generate-skill-review-entry.ps1  generated-ops-dashboard.ps1  init-db.sql  jebat-admin.ps1  jebat-build-llama.sh  jebat-convert.py  lifecycle-diff-helper.ps1  literature-review-scaffold.ps1  memory-consolidation-helper.ps1  memory-maintenance-checklist.md  memory-promote-helper.ps1  (+38 more)
shell/: jebat-completion.bash  jebat-completion.fish  jebat-completion.zsh
skills/: __init__.py  advanced_sql_skill.py  api_communication_skill.py  base_skill.py  expert_automation_skill.py  expert_config_skill.py  file_processing_skill.py  fullstack_development_skill.py
tasks/: lessons.md  todo.md
tests/: test_byok.py  test_cli_new_custom_providers.py  test_mimpi.py  (+14 more)
(+845 files in other folders)
