[project]
name = "jebat"
version = "6.1.0"
description = "JEBAT v6.1 — Sovereign AI Platform & Agent Workstation. ReAct loop, 89 tools, MCP, pentest engine, FTS5 wiki, 5-layer memory, multi-agent swarms, Docker sandbox, voice I/O, GitOps"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "humm1ngb1rd (Shaidan Shaari)", email = "humm1ngb1rd@nusabyte.my"}]

dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.3",
  "httpx>=0.26.0",
  "openai>=1.10.0",
  "anthropic>=0.8.1",
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
]

[project.scripts]
jebat = "apps.api.cli.jebat_cli:run"
jebat-server = "apps.api.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
]
markers = [
  "unit: Unit tests (no external dependencies)",
  "integration: Integration tests (may use mocked services)",
  "api: API endpoint tests (httpx AsyncClient against FastAPI)",
  "client: Direct client class unit tests (no HTTP layer)",
  "auth: Authentication and key management tests",
  "ghost: Ghost Database feature tests",
  "catalyst: Catalyst Observability feature tests",
  "chat: Chat sync and streaming tests",
  "logging: Request logging and middleware tests",
  "slow: Tests that take more than a few seconds",
]
testpaths = ["."]
pythonpath = ["jebat-core"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::RuntimeWarning:jebat.api.logging",
]
