[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jebat"
version = "6.1.0"
description = "JEBAT unified coding-agent CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "NusaByte", email = "dev@nusabyte.cloud" }]
keywords = ["cli", "coding-agent", "llm", "ollama", "openai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
jebat = "jebat_cli_new.jebat:main"

[project.urls]
Homepage = "https://jebat.online"

[tool.setuptools.packages.find]
include = ["jebat_cli_new*"]
