[project]
name = "jebat"
version = "6.1.0"
description = "JEBAT v6.1 — Sovereign AI Platform & Agent Workstation. ReAct loop, 89 tools, MCP, pentest engine, FTS5 wiki, 5-layer memory, multi-agent swarms, Docker sandbox, voice I/O, GitOps"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "humm1ngb1rd (Shaidan Shaari)", email = "humm1ngb1rd@nusabyte.my"}]

dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.3",
  "httpx>=0.26.0",
  "openai>=1.10.0",
  "anthropic>=0.8.1",
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "prompt-toolkit>=3.0.43",
  "structlog>=24.1.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "aiohttp>=3.9.1",
]

[project.optional-dependencies]
ml = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
]
nlp = [
    "sentence-transformers>=2.3.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
]
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "python-json-logger>=2.0.0",
    "streamlit>=1.32.0",
]
db = [
    "pymongo>=4.6.0",
    "redis>=5.0.1",
    "alembic>=1.13.0",
]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
]
monitoring = [
    "python-json-logger>=2.0.0",
    "streamlit>=1.32.0",
]
all = [
    "jebat[ml,nlp,server,db,dev,monitoring]",
]

[project.scripts]
jebat = "jebat.cli.jebat_cli:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["jebat", "jebat.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"