[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jebat-sdk"
version = "0.1.0"
description = "Official Python SDK for JEBAT AI Assistant REST API"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "humm1ngb1rd", email = "humm1ngb1rd@nusabyte.my"}]
keywords = ["jebat", "ai", "assistant", "sdk", "api", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.0",
    "websockets>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx-mock>=0.6.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
all = ["jebat-sdk[dev]"]

[project.scripts]
jebat-sdk = "jebat_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jebat_sdk*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true